<resources>
    <string name="app_name">GiuaKyNhom15</string>
    <string name="QLNK">Quản lý nhập kho</string>
    <string name="kho">Kho</string>
    <string name="tenKho">Tên kho</string>
    <string name="maKho">Mã kho</string>
    <string name="dskho">Danh sách kho</string>
    <string name="vat_tu">Vật tư</string>
    <string name="maVatTu">Mã vật tư</string>
    <string name="phieu_nhap">Phiếu nhập</string>
    <string name="tim_kiem">Tìm kiếm nâng cao</string>
    <string name="thong_ke">Thống kê vật tư</string>
    <string name="thoat">Thoát</string>
    <string name="dialog_thoat">Bạn có muốn thoát ứng dụng ?</string>
    <string name="dialog_confirm_xoa">Bạn có chắc chắn xoá ?</string>
    <string name="dialog_confirm_sua">Bạn có chắc chắn sửa ?</string>
    <string name="dialog_them_kho">Thêm kho</string>
    <string name="dialog_them_vat_tu">Thêm vật tư</string>
    <string name="dialog_chon_slvt">Số lượng vật tư</string>
    <string name="dialog_chon_vt">Chọn vật tư</string>
    <string name="co">Có</string>
    <string name="khong">Không</string>
    <string name="todo">TODO</string>
    <string name="ten_kho_dialog">Tên kho:</string>
    <string name="ma_vat_tu_dialog">Mã vật tư:</string>
    <string name="ten_vat_tu_dialog">Tên vật tư:</string>
    <string name="xuat_xu_dialog">Xuất xứ:</string>
    <string name="them_kho_dialog">Thêm</string>
    <string name="them_vat_tu_dialog">Thêm</string>
    <string name="dvt">Đơn vị:</string>
    <string name="sl">Số lượng:</string>
    <string name="m_kho">Mã kho:</string>
    <string name="t_n_kho">Tên kho:</string>
    <string name="s_a">Sửa</string>
    <string name="xoa">Xoá</string>
    <string name="m_phi_u">Mã phiếu:</string>
    <string name="ng_y_nh_p">Ngày nhập:</string>
    <string name="danh_s_ch_v_t_t">Danh sách vật tư</string>
    <string name="m_vt">Mã VT</string>
    <string name="t_n_vt">Tên VT</string>
    <string name="n_v_t_nh">Đơn vị tính</string>
    <string name="s_l_ng">Số lượng</string>
    <string name="m_v_t_t">Mã vật tư:</string>
    <string name="chi_ti_t_kho">CHI TIẾT KHO</string>
    <string name="chi_ti_t_phi_u_nh_p">CHI TIẾT PHIẾU NHẬP</string>
    <string name="xu_t_pdf">Xuất PDF</string>
    <string name="l_u">Lưu</string>
    <string name="th_m_vt">Thêm VT</string>
    <string name="chi_ti_t_v_t_t">CHI TIẾT VẬT TƯ</string>
    <string name="t_n_v_t_t">Tên vật tư:</string>
    <string name="xu_t_x">Xuất xứ:</string>
    <string name="t_m_ki_m_theo_t_n_v_t_t">Tìm kiếm theo tên vật tư</string>
    <string name="ch_n">Chọn</string>
    <string name="danh_s_ch_kho">DANH SÁCH KHO</string>
    <string name="t_m_ki_m_theo_t_n_kho">Tìm kiếm theo tên kho</string>
    <string name="th_m">Thêm</string>
</resources>