<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BB75F6C7"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#AEFFF5">

        <ImageView
            android:id="@+id/imgThoatPhieuNhapChiTiet"
            android:layout_width="26dp"
            android:layout_height="46dp"
            app:srcCompat="@drawable/ic_backward" />

        <TextView
            android:id="@+id/tvKho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingRight="20dp"
            android:text="@string/chi_ti_t_phi_u_nh_p"
            style="@style/tieu_de"
            android:textAlignment="center"
            android:textColor="@color/black"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/m_phi_u"
                android:textColor="@color/black"
                style="@style/chu_thuong" />

            <TextView
                android:id="@+id/tvMaPhieuChiTiet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DB0001"
                android:textColor="@color/black"
                style="@style/chu_thuong" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/kho"
                android:textColor="@color/black"
                style="@style/chu_thuong" />

            <TextView
                android:id="@+id/tvTenKhoPhieuNhapChiTiet"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/black"
                style="@style/chu_thuong" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/ng_y_nh_p"
                android:textColor="@color/black"
                style="@style/chu_thuong"/>

            <TextView
                android:id="@+id/tvNgayNhapPhieuChiTiet"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:text="DB0001"
                android:textColor="@color/black"
                style="@style/chu_thuong" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/danh_s_ch_v_t_t"
                android:textColor="@color/black"
                android:textSize="25dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:text="@string/m_vt"
                        style="@style/chu_thuong" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="30dp"
                        android:text="@string/t_n_vt"
                        style="@style/chu_thuong"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="30dp"
                        android:text="@string/n_v_t_nh"
                        style="@style/chu_thuong"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="30dp"
                        android:text="@string/s_l_ng"
                        style="@style/chu_thuong"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/lvDSVatTuChiTietPhieu"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="#A7FFE0"
            style="@style/chu_thuong"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/btnXuatPDFChiTietPhieuNhap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:text="@string/xu_t_pdf"
            />
        <Button
            android:id="@+id/btnLuuPhieuChiTiet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/background_button"
            android:text="@string/l_u" />

        <Button
            android:id="@+id/btnThemVTChiTietPhieuNhap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/background_button"
            android:text="@string/th_m_vt" />

        <Button
            android:id="@+id/btnXoaChiTietPhieuNhap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/background_button_thoat"
            android:text="@string/xoa" />
    </LinearLayout>
</LinearLayout>