<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#BB75F6C7"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/QLNK"
        style="@style/tieu_de"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="fill_vertical">

        <Button
            android:background="@drawable/background_button"
            android:layout_gravity="center"
            android:height="60dp"
            android:text="@string/kho"
            style="@style/chu_thuong"
            android:id="@+id/btnKho"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="70dp"/>
        <Button
            android:background="@drawable/background_button"
            android:layout_gravity="center"
            android:height="60dp"
            android:text="@string/vat_tu"
            style="@style/chu_thuong"
            android:id="@+id/btnVatTu"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="70dp"/>
        <Button
            android:background="@drawable/background_button"
            android:layout_gravity="center"
            android:height="60dp"
            android:text="@string/phieu_nhap"
            style="@style/chu_thuong"
            android:id="@+id/btnPhieuNhap"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="70dp"/>

        <Button
            android:background="@drawable/background_button"
            android:layout_gravity="center"
            android:height="60dp"
            android:text="@string/thong_ke"
            style="@style/chu_thuong"
            android:id="@+id/btnThongKe"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <Button
            android:background="@drawable/background_button_thoat"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:text="@string/thoat"
            style="@style/chu_thuong"
            android:id="@+id/btnThoat"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>