<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/background_dialog"
    android:layout_width="350dp"
    android:layout_gravity="center"
    android:layout_height="200dp">
    <TextView
        android:layout_marginTop="20dp"
        android:text="@string/dialog_thoat"
        style="@style/chu_thuong"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@drawable/background_button_thoat"
            android:layout_marginRight="15dp"
            android:text="@string/co"
            android:id="@+id/btnCo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:background="@drawable/background_button"
            android:layout_marginLeft="15dp"
            android:text="@string/khong"
            android:id="@+id/btnKhong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>