<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BB75F6C7"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgThoatChiTietVatTu"
            android:layout_width="26dp"
            android:layout_height="46dp"
            app:srcCompat="@drawable/ic_backward"
            android:background="#AEFFF5"/>

        <TextView
            android:id="@+id/tvVatTu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/chi_ti_t_v_t_t"
            android:paddingRight="20dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            style="@style/tieu_de"
            android:background="#AEFFF5"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imgChiTietVT"
            android:layout_width="250dp"
            android:layout_height="170dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="20dp"
                android:text="@string/m_v_t_t"
                android:textColor="@color/black"
                style="@style/chu_thuong" />

            <TextView
                android:id="@+id/tvMaVatTuChiTiet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DB0001"
                android:textColor="@color/black"
                style="@style/chu_thuong" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="14dp"
                android:text="@string/t_n_v_t_t"
                android:textColor="@color/black"
                style="@style/chu_thuong" />

            <EditText
                android:id="@+id/editTenVatTuChiTiet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="true"
                android:text="DB0001"
                android:textColor="@color/black"
                style="@style/chu_thuong"
                tools:ignore="Deprecated" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="14dp"
                android:text="@string/xu_t_x"
                android:textColor="@color/black"
                style="@style/chu_thuong" />

            <EditText
                android:id="@+id/editXuatXuChiTiet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="true"
                android:text="DB0001"
                android:textColor="@color/black"
                style="@style/chu_thuong"
                tools:ignore="Deprecated" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnSuaVatTu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="99dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_button"
                android:text="@string/s_a" />

            <Button
                android:id="@+id/btnXoaVatTu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_button_thoat"
                android:text="@string/xoa" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>